opam-version: "1.2.2"
version: "0.0"
maintainer: "freebroccolo@users.noreply.github.com"
authors: ["Darin Morrison"]
homepage: "https://github.com/1caml/1caml"
bug-reports: "https://github.com/1caml/1caml/issues"
dev-repo: "https://github.com/1caml/1caml.git"
license: "Apache-2.0"
depends: [
  "cmdliner" {= "1.0.2"}
  "fmt" {= "0.8.4"}
  "lwt" {= "3.1.0"}
  "malfunction" {= "0.2.1"}
  "menhir" {= "20171013"}
  "ppx_deriving" {= "4.2"}
  "uuseg" {= "10.0.0"}
  "uutf" {= "1.0.1"}
]
build: [
  ["jbuilder" "build" "--only" "1caml" "--root" "." "-j" jobs "@install"]
]
